<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ScoreBoard</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_help">Instructions</string>
    <string name="menu_item_reset">Reset</string>
    <string name="menu_item_undo">Undo</string>
    <string name="menu_item_exit">Quit</string>
    <string name="edit_team_name_title">Enter team name</string>
    <string name="edit_team_score_title">Enter score</string>
    <string name="title_activity_help">Instructions</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="reset_dialog_title">Reset</string>
    <string name="reset_dialog_text">Do you want to reset all scores?</string>
    <string name="reset_button">Reset</string>
    <string name="application_help">
        <![CDATA[
        Scoreboard is a simple score board. You can track team scores and configure team count and names.
        <h4>Scoring</h4>
        Touch a team column and a score dialog will pop up. The selected score will get added to the column you\'ve touched and will be summed automatically.<br><br>
        If you add a wrong score use the undo menu. It will revert the last added score.<br><br>
        When you finish a game use the reset menu option to start a new one.
        <h4>Team names and count</h4>
        To change a team name - hold on the team name. The number of teams can be configured in the settings menu.
        ]]>
    </string>

</resources>
