<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/menu_item_help"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_item_help" />

    <item
        android:id="@+id/menu_item_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_item_settings" />

    <item
        android:id="@+id/menu_item_reset"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_item_reset" />

    <item
        android:id="@+id/menu_item_undo"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_item_undo" />

    <item
        android:id="@+id/menu_item_exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_item_exit" />
</menu>
